Fix: Add z-index to bottom navigation

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ padding:16px;
     left:0;
     right:0;
     bottom:0;
+   z-index:999;
 
     display:flex;
     justify-content:space-around;
